# debounce-avr

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
